# Nexum

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  main.py  requirements.txt
app/: api.py  test_vector.py
app/db/: supabase.py
app/gpt/: greet_student.py
client/: Dockerfile  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  fonts.css  index.css  localStorage.ts
client/src/components/: ChatBubble.css  ChatBubble.tsx  Loader.css  Loader.tsx  MarkdownBubble.tsx  Navbar.css  Navbar.tsx  Sidebar.tsx  Sources.css  Sources.tsx  Taskbar.tsx  UserInput.css  UserInput.tsx
scraper/: .gitignore  celerybeat-schedule.db
scraper/app/: api.py
scraper/app/celery_app/: __init__.py  config.py  worker.py
scraper/app/celery_app/tasks/: events_task.py  societies_task.py  test_task.py  uni_website_task.py
scraper/app/scrapy_app/: __init__.py
scraper/app/scrapy_app/scrapy_app/: __init__.py  filter.py  pipelines.py  settings.py
scraper/app/scrapy_app/scrapy_app/spiders/: website_spider.py
scraper/app/utils/: time_utils.py
server/: .dockerignore  .gitignore  Dockerfile  requirements.txt
server/app/: api.py  apitest.py  test_vector.py
server/app/db/: supabase.py
server/app/gpt/: agent_tools.py  greet_student.py  pipeline.py  sql_agent.py  sql_query.py  system_prompts.py
server/app/utils/: log_config.py  time_utils.py
src/: article_to_summarize.md  error.rs  main.rs  model.rs
src/web/: aiapi.rs  article_to_summarize.md  mod.rs  openAI.rs  routes_messages.rs
tests/: quick_dev.rs
