[package]
name = "nexum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7.2"}
serde = {version = "1", features = ["derive"]}
serde_json = {version="1.0.1"}

[dev-dependencies]
httpc-test = "0.1.8"
anyhow = "1"
