[package]
name = "nexum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7.2"}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.1"
tower-http = { version = "0.5.0", features = ["cors"] }
dotenv = "0.15.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"

[dev-dependencies]
httpc-test = "0.1.8"
anyhow = "1"
